Convert from CacheService into using Hibernate